more on the geometry of cubic fourfolds

--- a/body.tex
+++ b/body.tex
@@ -6,7 +6,7 @@
 \input{flops.tex}
 \newpage
 
-\section{K3 surfaces and the cubic fourfold}
+\section{The cubic fourfold}
 \input{cubicfourfold.tex}
 \newpage
 
