Add some stuff on singularity categories

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,3 +24,44 @@
     volume = {No. 52},
     year = {1977},
 }
+
+@article{OrlovSingularities,
+    shorthand = {Orl04},
+    author = {Orlov, D. O.},
+    title = {Triangulated categories of singularities and {D}-branes in {L}andau-{G}inzburg models},
+    journal = {Tr. Mat. Inst. Steklova},
+    volume = {246},
+    year = {2004},
+    pages = {240--262},
+}
+@article{OrlovKnorrer,
+    shorthand = {Orl06},
+    author = {Orlov, D. O.},
+    title = {Triangulated categories of singularities, and equivalences between {L}andau-{G}inzburg models},
+    journal = {Mat. Sb.},
+    volume = {197},
+    year = {2006},
+    number = {12},
+    pages = {117--132},
+}
+@incollection{OrlovTheorem,
+    shorthand = {Orl09},
+    author = {Orlov, Dmitri},
+    title = {Derived categories of coherent sheaves and triangulated categories of singularities},
+    booktitle = {Algebra, arithmetic, and geometry: in honor of {Y}u. {I}. {M}anin. {V}ol. {II}},
+    series = {Progr. Math.},
+    volume = {270},
+    pages = {503--531},
+    publisher = {Birkh\"{a}user Boston, Boston, MA},
+    year = {2009},
+}
+@article{Shipman,
+    shorthand = {Shi12},
+    author = {Shipman, Ian},
+    title = {A geometric approach to {O}rlov's theorem},
+    journal = {Compos. Math.},
+    volume = {148},
+    year = {2012},
+    number = {5},
+    pages = {1365--1389},
+}
