--- a/body.tex
+++ b/body.tex
@@ -10,6 +10,6 @@
 \input{cubicfourfold.tex}
 \newpage
 
-\section{Matrix factorizations}
-\input{matrixfactorizations.tex}
+\section{Derived categories of singularities and matrix factorizations}
+\input{singularities.tex}
 \newpage
