--- a/commands.tex
+++ b/commands.tex
@@ -91,6 +91,8 @@
 \DeclareMathOperator{\Pic}{Pic}
 \DeclareMathOperator{\Coh}{Coh}
 \DeclareMathOperator{\QCoh}{QCoh}
+\DeclareMathOperator{\Perf}{Perf}
+\DeclareMathOperator{\DPerf}{\mathfrak{Perf}}
 \newcommand{\Ab}{\mathrm{Ab}}
 
 % letters
@@ -123,5 +125,6 @@
 \newcommand{\pt}{\mathrm{pt}} % point
 \newcommand{\ev}{\mathrm{ev}} % evaluation
 \newcommand{\qi}{\mathrm{q.i.}} % quasiisomorphism
+\newcommand{\Sg}{\mathrm{Sg}} % singularities
 
 \newcommand{\todo}[1]{{\color{red}\textbf{TODO!: #1}}}
