Add some stuff on matrix factorizations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -65,3 +65,23 @@
     number = {5},
     pages = {1365--1389},
 }
+@article{Eisenbud,
+    shorthand = {Eis80},
+    author = {Eisenbud, David},
+    title = {Homological algebra on a complete intersection, with an application to group representations},
+    journal = {Trans. Amer. Math. Soc.},
+    volume = {260},
+    year = {1980},
+    number = {1},
+    pages = {35--64},
+}
+@article{Ed,
+    shorthand = {Ed11},
+    author = {Segal, Ed},
+    title = {Equivalence between {GIT} quotients of {L}andau-{G}inzburg {B}-models},
+    journal = {Comm. Math. Phys.},
+    volume = {304},
+    year = {2011},
+    number = {2},
+    pages = {411--432},
+}
