--- a/commands.tex
+++ b/commands.tex
@@ -93,6 +93,7 @@
 \DeclareMathOperator{\QCoh}{QCoh}
 \DeclareMathOperator{\Perf}{Perf}
 \DeclareMathOperator{\DPerf}{\mathfrak{Perf}}
+\newcommand{\MF}{\mathrm{MF}}
 \newcommand{\Ab}{\mathrm{Ab}}
 
 % letters
