--- a/singularities.tex
+++ b/singularities.tex
@@ -12,13 +12,13 @@ the failure of this property is an important point.
     $A$-modules.
 \end{theorem}
 
-Motivated by this, we make the following definition.
+Motivated by this, one is led to the following definition due to Orlov.
 
 \begin{definition}{}{}
     Suppose $X$ is a quasi-projective variety. A complex of sheaves on $X$ is
     perfect if it is quasi-isomorphic to a bounded complex of finite type
-    locally free sheaves. This defines a triangulated subcategory
-    $\DPerf(X)\subseteq D^b(X)$ by the construction of cones in terms of direct
+    locally free sheaves. This gives a triangulated subcategory
+    $\DPerf(X)\subseteq D^b(X)$, by the construction of cones in terms of direct
     sums. The derived category of singularities is the quotient
     $D_\Sg(X)\coloneqq D^b(X)/\DPerf(X)$.
 \end{definition}
@@ -27,22 +27,22 @@ Recall from Definition~\ref{defn:verdierquotient} that this quotient is given by
 inverting all morphisms in $D^b(X)$ whose cones are perfect complexes.
 
 \begin{remark}{}{}
-    As noted earlier, for a smooth variety all bounded complexes of coherent
+    As noted above, for a smooth variety all bounded complexes of coherent
     sheaves are perfect, so $\DPerf(X)=D^b(X)$ and $D_\Sg(X)=0$.
 \end{remark}
 
 \begin{remark}{}{}
     The \emph{underived} category of perfect complexes
-    $\Perf(X)\subseteq K(\Coh X)$ inherits a differential graded structure from
-    $K(\Coh X)$. The homotopy category $H^0\Perf(X)$ given by taking 0th
+    $\Perf(X)\subseteq K^b(\Coh X)$ inherits a differential graded structure
+    from $K^b(\Coh X)$. The homotopy category $H^0\Perf(X)$ given by taking 0th
     cohomology of $\Hom^\bullet(-,-)$ for morphisms is equivalent to
-    $\DPerf(X)$, since % TODO
-
-    In the smooth case, where $\DPerf(X)=D^b(X)$, this gives a
-    ``dg-enhancement'' of $D^b(X)$. The richer structure of a dg-category can be
-    nicer to work with than the triangulated category $D^b(X)$, e.g. functorial
-    cones.
+    $\DPerf(X)$, as in Theorem~\ref{thm:DfromK}. In the smooth case, where
+    $\DPerf(X)=D^b(X)$, this gives a ``dg-enhancement'' of $D^b(X)$. The richer
+    structure of a dg-category can be nicer to work with than the triangulated
+    category $D^b(X)$, e.g. giving functorial cones.
 \end{remark}
+
+\todo{say what dg categories are}
 
 \begin{proposition}{}{}
     Any object in $D_\Sg(X)$ is isomorphic to the image of some shifted sheaf.
@@ -88,4 +88,141 @@ its singular locus, and in fact this is true; $D_\Sg(U)\simeq D_\Sg(X)$ for a
 formal neighbourhood $U$ of the singular locus. See
 \cite[Prop~1.14]{OrlovSingularities} and \cite[\S6]{Shipman}.
 
-\subsection{Matrix factorizations}
+\subsection{Matrix factorizations and Kn\"orrer periodicity}
+
+\subsubsection{Triangulated categories of matrix factorizations}
+
+Consider the cone $Z=\{xy=z^2\}\subset\A^3$. Looking at the structure sheaf of
+the line $L=\{x=z=0\}\subset Z$, we are led to a periodic projective resolution
+\begin{equation*}
+    \cdots \to
+    \O_Z^2 \xrightarrow{\begin{pmatrix}
+        y & -z \\ -z & x
+    \end{pmatrix}}
+    \O_Z^2 \xrightarrow{\begin{pmatrix}
+        x & z \\ z & y
+    \end{pmatrix}}
+    \O_Z^2 \xrightarrow{\begin{pmatrix}
+        y & -z \\ -z & x
+    \end{pmatrix}}
+    \O_Z^2 \xrightarrow{\begin{pmatrix}
+        x & z
+    \end{pmatrix}}
+    \O_L\to0,
+\end{equation*}
+arising from a factorization of $xy-z^2$ into matrices:
+\begin{equation*}
+    \begin{pmatrix}
+        y & -z \\ -z & x
+    \end{pmatrix}
+    \begin{pmatrix}
+        x & z \\ z & y
+    \end{pmatrix}
+        = (xy-z^2)I =
+    \begin{pmatrix}
+        x & z \\ z & y
+    \end{pmatrix}
+    \begin{pmatrix}
+        y & -z \\ -z & x
+    \end{pmatrix}
+\end{equation*}
+Viewed over $\A^3$, this is a kind of twisted chain complex, satisfying
+$d^2=xy-z^2$ instead of $d^2=0$.
+
+\begin{definition}{}{}
+    Suppose $X$ is a smooth quasi-projective variety, and $W:X\to\A^1$ is a
+    regular function. A matrix factorization of $W$ on $X$ is a pair of vector
+    bundles $\calE^0,\calE^1$ on $X$ with maps
+    \begin{equation*}
+        \begin{tikzcd}
+            \calE^0 \ar[r,"d^0",shift left] & \calE^1 \ar[l,"d^1",shift left]
+        \end{tikzcd}
+    \end{equation*}
+    satisfying $d^1d^0=W\cdot\id_{\calE^0}$, $d^0d^1=W\cdot\id_{\calE^1}$.
+\end{definition}
+
+In other words, these are $\Z_2$-graded twisted chain complexes with $d^2=W$.
+Given two matrix factorizations $\calE^\bullet,\calF^\bullet$ we obtain a
+genuine $\Z_2$-graded complex $\Hom^\bullet(\calE^\bullet,\calF^\bullet)$ with
+differential $f\mapsto d\circ f+(-1)^{|f|}f\circ d$ squaring to $W-W=0$. This
+gives a differential $\Z_2$-graded category, and as seen earlier we then have a
+triangulated homotopy category.
+
+\begin{definition}{}{}
+    Taking the 0th cohomology of the complex
+    $\Hom^\bullet(\calE^\bullet,\calF^\bullet)$ for morphisms gives a
+    triangulated category $\MF(X,W)$ of matrix factorizations.
+\end{definition}
+
+\begin{remark}{}{}
+    If $W=0$ we recover a weaker version of $\DPerf(X)=D^b(X)$ with only
+    $\Z_2$-grading, having a natural forgetful functor $D^b(X)\to\MF(X,0)$.
+\end{remark}
+
+\begin{example}{}{}
+     Suppose $X=\A^2$, with $W=xy$. The obvious factorization of $W$ gives an
+     object
+     \begin{equation*}
+         K = \left(\begin{tikzcd}
+             \O_X \ar[r,"x",shift left] &
+             \O_X \ar[l,"y",shift left]
+         \end{tikzcd}\right) \in\MF(X,W).
+     \end{equation*}
+     Note that
+     \begin{equation*}
+         \Hom^\bullet(K,K) =
+         \left(\begin{tikzcd}[ampersand replacement=\&,column sep=huge]
+                 \O_X^2 \ar[shift left]{r}{\begin{pmatrix}
+                     x & -x \\ -y & y
+                 \end{pmatrix}} \&
+                 \O_X^2 \ar[shift left]{l}{\begin{pmatrix}
+                     y & x \\ y & x
+                 \end{pmatrix}}
+         \end{tikzcd}\right),
+     \end{equation*}
+     with cohomology
+     \begin{align*}
+         H^0\Hom(K,K) &= \{(f,g):f=g\}/\langle(x,x),(y,y)\rangle
+             = \C\cdot(1,1), \\
+         H^1\Hom(K,K) &= \{(f,g):yf+xg=0\}/\langle(x,-y)\rangle
+             = 0,
+     \end{align*}
+     so $K$ is an exceptional object. In fact $\langle K\rangle^\perp=0$, so
+     $\MF(X,W)\simeq D^b(\pt)$ is generated by $K$. % TODO: why?
+\end{example}
+
+\begin{remark}{}{}
+    Matrix factorizations first arose in commutative algebra, relating to
+    maximal Cohen--Macaulay modules \cite{Eisenbud}. In the geometric setting of
+    derived categories they are a natural object of study, e.g. via minimal
+    resolutions, and motivated by Orlov's theorem. In the context of mirror
+    symmetry, (graded) matrix factorizations arise as the conjectural (due to
+    Kontsevich) category of B-branes on a Landau--Ginzburg model $(X,W)$,
+    generalizing the case $W=0$ which should give $D^b(X)$. See
+    \cite{OrlovTheorem}, \cite{Ed}.
+\end{remark}
+
+% TODO: example resolve point on cubic curve. point moves, MF moves, but remains
+% homotopy equivalent
+
+\subsubsection{Comparing categories of singularities and matrix factorizations}
+
+\subsubsection{Kn\"orrer periodicity}
+
+\begin{equation*}
+    \begin{pmatrix}
+        M & x \\ -y & N
+    \end{pmatrix}\begin{pmatrix}
+        N & -x \\ y & M
+    \end{pmatrix}
+        = W+xy =
+    \begin{pmatrix}
+        N & -x \\ y & M
+    \end{pmatrix}\begin{pmatrix}
+        M & x \\ -y & N
+    \end{pmatrix}
+\end{equation*}
+
+\subsection{Orlov's theorem and Landau--Ginzburg models}
+
+% kuznetzov component example for orlov's theorem
