cubics with a plane

--- a/commands.tex
+++ b/commands.tex
@@ -117,6 +117,15 @@
 \newcommand{\calI}{\mathcal{I}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calT}{\mathcal{T}}
+\newcommand{\bfF}{\mathbf{F}}
+\newcommand{\bfL}{\mathbf{L}}
+\newcommand{\tbfF}{\widetilde{\mathbf{F}}}
+\newcommand{\tbfL}{\widetilde{\mathbf{L}}}
+\newcommand{\scrF}{\mathscr{F}}
+\newcommand{\tscrF}{\widetilde{\mathscr{F}}}
+\newcommand{\scrL}{\mathscr{L}}
+\newcommand{\tscrL}{\widetilde{\mathscr{L}}}
+
 
 % names
 \newcommand{\id}{\mathrm{id}} % identity
